--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,4 +1,5 @@
 swish:
-  payment-requests-endpoint: https://mss.cpc.getswish.net/swish-cpcapi/api/v1/paymentrequests/
+  payments-endpoint: https://mss.cpc.getswish.net/swish-cpcapi/api/v1/paymentrequests/
+  refunds-endpoint: https://mss.cpc.getswish.net/swish-cpcapi/api/v1/refunds/
   cert-file: classpath:swish/Swish_Merchant_TestCertificate_1231181189.p12
   cert-password: swish
